# NotADB

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  build.sh
app/MockServerClient/: main.cpp
app/SimpleTCPClient/: main.cpp
app/SimpleTCPServer/: BUILD  main.cpp
app/demo/Configuration/: BUILD  main.cpp
app/demo/MockServerClient/: BUILD
app/demo/SimpleTCPClient/: BUILD
app/demo/SimpleTCPServer/: main.cpp
example/EmptyGRPCTransport/: BUILD  main.cpp
example/KafkaProducerConsumer/: BUILD  main.cpp
example/MyRocksDB/: BUILD  replicable_rocksdb.cpp  simple_rocksdb.cpp
example/SimpleTCPClient/: main.cpp
interface/: BUILD  connection.h  db.h  message.h  partition.h  service.h  transport.h
lib/: CMakeLists.txt
lib/config/: BUILD  Configuration.cpp  Configuration.h
lib/engine/: AsyncRocksDB.cpp  AsyncRocksDB.h  BUILD  Comparator.h  ComparatorFactory.h  KeyScore.cpp  KeyScore.h  MergableOperation.h  MergeOperation.cpp  MergeOperation.h  MyRocksDB.cpp  MyRocksDB.h  PrefixScoreObject.cpp  PrefixScoreObject.h  ReplicableRocksDB.cpp  ReplicableRocksDB.h  RocksDBFactory.h  RocksDBManager.h  SimpleRocksDB.cpp  SimpleRocksDB.h
lib/grpc/: BUILD  GrpcService.h  GrpcTransport.cpp  GrpcTransport.h  HealthService.h
lib/kafka/: BUILD  Codec.cpp  Codec.h  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
lib/mockconnection/: BUILD  MockConnection.cpp  MockConnection.h
lib/route/: BUILD  KeyPartition.cpp  PartitionStrategyFactory.cpp  PartitionStrategyFactory.h  PrefixPartition.cpp  PrefixPartition.h  Router.cpp  Router.h
lib/route/partitions/: BUILD  KeyPartition.h
lib/tcpconnection/: BUILD  MessageBuffer.h  MessageCodec.cpp  MessageCodec.h  TcpConnection.cpp  TcpConnection.h
message/: BUILD  MessageFactory.cpp  MessageFactory.h
message/avro/: AvroFactory.h  AvroMessage.h  avro.h  gen.sh  schema.json
message/commonjson/: CommonJsonFactory.h  CommonJsonMessage.h
rpc/HealthCheck/: BUILD  health_check.proto
rpc/NotADB/: BUILD  not_a_db.proto
script/: setup.sh
src/: CMakeLists.txt  autobot.cpp  autobot.h
src/app/: CMakeLists.txt
src/app/MockServerClient/: CMakeLists.txt  main.cpp
src/app/SimpleTCPClient/: CMakeLists.txt  main.cpp
src/app/SimpleTCPServer/: CMakeLists.txt  main.cpp
src/interface/: CMakeLists.txt  connection.h  message.h
src/lib/: CMakeLists.txt  MockConnection.cpp  MockConnection.h
src/lib/mockconnection/: CMakeLists.txt  MockConnection.cpp  MockConnection.h
src/lib/tcpconnection/: CMakeLists.txt  MessageBuffer.h  MessageCodec.cpp  MessageCodec.h  TcpConnection.cpp  TcpConnection.h
src/message/: CMakeLists.txt  MessageFactory.cpp  MessageFactory.h
src/message/commonjson/: CommonJsonFactory.h  CommonJsonMessage.h
src/message/fix/: FIXMessage.cpp  FIXMessage.h
src/message/fix/codegen/: FIX42.json  convert.py
test/config/: BUILD  Configuration_test.cpp
test/lib/config/: BUILD
test/lib/engine/: BUILD  Comparator_test.cpp
test/lib/message/: BUILD  Message_test.cpp
test/lib/route/: BUILD  Route_test.cpp
test/route/: BUILD
